# duckkb

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  Makefile  README.md  coverage.json  pyproject.toml  test_api_models.py  test_check_cache.py  test_check_data.py  test_check_fts_content.py  test_check_fts_content2.py  test_fts_clear_cache.py  test_fts_debug.py  test_fts_fix.py  test_fts_rebuild.py  test_fts_simple.py  test_fts_simple_search.py  核心逻辑设计文档.md  设计文档.md
.duckkb/default/: config.yaml  user_dict.txt
.gitea/workflows/: publish-tag.yml
.trae/documents/: DuckDB内存模式并发分析.md  DuckKB_MCP工具分析与改进计划.md  DuckKB_MCP工具测试报告.md  DuckKB_MCP工具测试计划.md  DuckKB_数据更新与删除设计.md  DuckKB项目分析与测试计划.md  DuckKB项目测试报告.md  FTS扩展加载优化方案.md  FTS扩展加载优化计划.md  MCP 工具测试报告.md  MCP工具优化计划-适配本体数据模型.md  check_list.md  cleanup-database-module.md  cleanup_unused_code_plan.md  cli-tools-plan.md  cli_cleanup_plan.md  (+88 more)
duckkb/: __init__.py  types.py
tests/: conftest.py  test_backup.py  test_cache.py  test_chunking.py  test_cli.py  test_concurrency.py  test_config.py  test_core.py  test_core_integration.py  test_db.py  test_duckdb_concurrency.py  test_embedding.py  test_embedding_cache.py  test_engine.py  test_error_recovery.py  test_exceptions.py  test_file_ops.py  test_graph.py  test_import.py  test_index.py  test_indexer.py  test_main.py  test_mcp.py  test_mcp_parameter_parsing.py  test_ontology.py  test_real_functional.py  test_rwlock.py  test_schema.py  test_search.py  test_searcher.py  test_sql_security.py  test_storage.py  test_text_segment.py  test_tokenizer.py  test_validator.py
(+150 files in other folders)
