[project]
name = "duckkb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.4",
    "fastmcp>=3.0.2",
    "jieba>=0.42.1",
    "numpy>=2.4.2",
    "aiopath>=0.7.7",
    "aiofiles>=23.2.1",
    "openai>=2.23.0",
    "orjson>=3.11.7",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyyaml>=6.0.2",
    "rich>=14.3.3",
    "typer>=0.24.1",
    "watchfiles>=1.1.1",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=6.3.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=duckkb --cov-branch --cov-report=term-missing --cov-report=json:coverage.json --cov-fail-under=80"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/duckkb"]
